# MineAgents

./: .env  .env.example  .gitignore  LICENSE  MineAgents.sln  README.md  launcher.bat  package.json  pnpm-lock.yaml  pyproject.toml  start_bot.bat  vitest.workspace.ts
apps/bot/: .env.example  Bot.esproj  README.md  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/bot/evaluations/: llm_plan_cases.json
apps/bot/src/: action-executor.ts  action-executor.vitest.test.ts  action-handlers.ts  chat-commands.vitest.test.ts  config.ts  config.vitest.test.ts  goals.ts  goals.vitest.test.ts  index.ts  main.ts  narration.ts  narration.vitest.test.ts  perception.ts  perception.vitest.test.ts  planner-worker-client.ts  planner-worker.ts  planner.ts  planner.vitest.test.ts  reflection-log.ts  reflection-log.vitest.test.ts  scouting.ts  session-logger.ts  setup.ts
apps/bot/tests/: action-executor.vitest.test.ts  chat-commands.vitest.test.ts  config.vitest.test.ts  goals.vitest.test.ts  index.vitest.test.ts  narration.vitest.test.ts  perception.vitest.test.ts  planner.vitest.test.ts  reflection-log.vitest.test.ts  safety-rails.vitest.test.ts  test-helpers.ts
apps/dashboard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dashboard/server/: index.ts
apps/dashboard/src/: App.tsx  index.css  types.ts
apps/dashboard/tests/: App.test.tsx  main.test.tsx  types.test.ts  vite-config.test.ts  vitest-config.test.ts
config/: bot.sample.yaml  sample.world.json
docs/: README.md
py/agent/: README.md
(+202 files in other folders)
