[project]
name = "mineagents"
version = "0.0.0"
description = "Python sidecar (RAG, planning)"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22.0",
    "pytest>=8.2.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I"]